--- a/_includes/site-aside.html
+++ b/_includes/site-aside.html
@@ -7,8 +7,7 @@
 
   {% elsif page.layout == "page" or page.layout == "home" or page.layout == "blog" %}
     <section class="section  section--description">
-      <h3>About this site</h3>
-      <p>{{ site.description }}</p>
+      <h3>Links</h3>
       {% include nav-social.html %}
     </section>
 
