--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -14,15 +14,15 @@ $captionColour: #a8adac !default;
 $white: #ffffff !default;
 
 // Typography
-$bodytype: (font-family: "Georgia, serif",
+$bodytype: (font-family: "'Open Sans',sans-serif",
   regular: 400,
   bold: 700,
   italic: italic,
   cap-height: 0.75) !default;
 
-$headingtype: (font-family: '"Merriweather", serif',
+$headingtype: (font-family: "'Oswald','Arial Narrow',arial",
   regular: 400,
-  bold: 700,
+  bold: 500,
   cap-height: 0.75) !default;
 
 $monospacetype: (font-family: "Menlo, monospace",
@@ -30,4 +30,4 @@ $monospacetype: (font-family: "Menlo, monospace",
   cap-height: 0.68) !default;
 
 // Font import, if you're using a non-standard web font
-@import url("https://fonts.googleapis.com/css?family=Merriweather:400,700");
+@import url("https://fonts.googleapis.com/css?family=Oswald:400,700");
