--- a/_includes/nav-footer.html
+++ b/_includes/nav-footer.html
@@ -1,4 +1,4 @@
-{% if site.navigation_footer %}
+<!-- {% if site.navigation_footer %} -->
 <nav class="nav  nav--footer">
   <ul class="list list--nav">
     {% for item in site.navigation_footer %}
@@ -15,6 +15,8 @@
     {% endfor %}
   </ul>
 </nav>
+<!--
 {% else %}
   {% include nav-default.html %}
 {% endif %}
+-->
