--- a/_includes/site-love.html
+++ b/_includes/site-love.html
@@ -20,3 +20,4 @@
   <div style="text-align: center;"><button onclick="toggleShape()">Chuyển hiệu ứng</button></div>
 </div>
 <script type="text/javascript" src="{{ "/assets/scripts/box3d.js" | relative_url }}"></script>
+<link rel="stylesheet" href="/assets/css/styles.css">
