config line-height for code block

--- a/_sass/sassline-base/_typography.scss
+++ b/_sass/sassline-base/_typography.scss
@@ -331,6 +331,7 @@ a {
     white-space: pre-wrap;
     word-break: break-all;
     word-wrap: break-word;
+    line-height: 20px !important;
   }
 
   code {
