add post: common software architecture

--- a/_sass/_theme.scss
+++ b/_sass/_theme.scss
@@ -455,3 +455,9 @@ pre code {
     overflow-x: scroll;
   }
 }
+
+.image-caption {
+  text-align: center;
+  font-size: .8rem;
+  color: light-grey;
+}
