update some styles

--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -1,6 +1,6 @@
 // Background colours
 $backgroundColour: #ffffff !default;
-$codeBackgroundColour: #fafafa !default;
+$codeBackgroundColour: #f0f0f0 !default;
 $featureBackgroundColour: #f9fafa !default;
 $accentColour: #bf2105 !default;
 
