--- a/_sass/sassline-base/_typography.scss
+++ b/_sass/sassline-base/_typography.scss
@@ -54,7 +54,7 @@ a {
 
   // Paragraphs. OpenType ligatures and oldstyle figures enabled if available.
   p {
-    @include baseline($fontsize: zeta, $font: $bodytype, $lineheight: 2, $below: 2, $breakpoint: all);
+    @include baseline($fontsize: zeta, $font: $bodytype, $lineheight: 2, $below: 1, $breakpoint: all);
 
     font-feature-settings: 'kern', 'onum', 'liga';
   }
@@ -335,7 +335,7 @@ a {
   }
 
   code {
-    @include fontsize(theta, all);
+    @include fontsize(eta, all);
 
     line-height: 1rem;
   }
